add_executable(boxes boxes.c)
add_executable(panes panes.c)
add_executable(grids grids.c)
add_executable(fixed fixed.c)
add_executable(expanders expanders.c)
add_executable(notebooks notebooks.c)
add_executable(eventboxes eventboxes.c)
add_executable(exercise3-1 exercise3-1.c)
add_executable(exercise3-2 exercise3-2.c)
